Migration of documentation from SpringFox to SpringDoc